--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,107 @@
+@font-face {
+  font-family: "Objectivity-Black";
+  src: url("/fonts/EBGaramond/Objectivity-Black.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-BlackSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-BlackSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Objectivity-Bold";
+  src: url("/fonts/EBGaramond/Objectivity-Bold.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-BoldSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-BlackSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Objectivity-ExtraBold";
+  src: url("/fonts/EBGaramond/Objectivity-ExtraBold.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-ExtraBoldSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-ExtraBoldSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Objectivity-Light";
+  src: url("/fonts/EBGaramond/Objectivity-Light.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-LightSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-LightSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Objectivity-Medium";
+  src: url("/fonts/EBGaramond/Objectivity-Medium.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-MediumSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-MediumSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Objectivity-Regular";
+  src: url("/fonts/EBGaramond/Objectivity-Regular.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-RegularSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-RegularSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Objectivity-Super";
+  src: url("/fonts/EBGaramond/Objectivity-Super.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-SuperSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-SuperSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Objectivity-Thin";
+  src: url("/fonts/EBGaramond/Objectivity-Thin.ttf");
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Objectivity-ThinSlanted";
+  src: url("/fonts/EBGaramond/Objectivity-ThinSlanted.ttf");
+  font-style: italic;
+  font-display: swap;
+}
+
 html,
 body {
   padding: 0;
@@ -6,11 +110,3 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
