--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 @font-face {
   font-family: "Objectivity-BlackSlanted";
   src: url("/fonts/EBGaramond/Objectivity-BlackSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -20,7 +20,7 @@
 @font-face {
   font-family: "Objectivity-BoldSlanted";
   src: url("/fonts/EBGaramond/Objectivity-BlackSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -33,7 +33,7 @@
 @font-face {
   font-family: "Objectivity-ExtraBoldSlanted";
   src: url("/fonts/EBGaramond/Objectivity-ExtraBoldSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -46,7 +46,7 @@
 @font-face {
   font-family: "Objectivity-LightSlanted";
   src: url("/fonts/EBGaramond/Objectivity-LightSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -59,7 +59,7 @@
 @font-face {
   font-family: "Objectivity-MediumSlanted";
   src: url("/fonts/EBGaramond/Objectivity-MediumSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -72,7 +72,7 @@
 @font-face {
   font-family: "Objectivity-RegularSlanted";
   src: url("/fonts/EBGaramond/Objectivity-RegularSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -85,7 +85,7 @@
 @font-face {
   font-family: "Objectivity-SuperSlanted";
   src: url("/fonts/EBGaramond/Objectivity-SuperSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -98,7 +98,7 @@
 @font-face {
   font-family: "Objectivity-ThinSlanted";
   src: url("/fonts/EBGaramond/Objectivity-ThinSlanted.ttf");
-  font-style: italic;
+  font-style: normal;
   font-display: swap;
 }
 
@@ -106,7 +106,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.plasmic_code_component_examples_root_reset__2FjkK {
+  font-family: Inter, "Objectivity-Bold" !important;
+}
