--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,102 +1,102 @@
 @font-face {
-  font-family: "Objectivity-Black";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-Black.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-BlackSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-BlackSlanted.ttf");
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Objectivity-Bold";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-Bold.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-BoldSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-BlackSlanted.ttf");
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Objectivity-ExtraBold";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-ExtraBold.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-ExtraBoldSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-ExtraBoldSlanted.ttf");
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Objectivity-Light";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-Light.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-LightSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-LightSlanted.ttf");
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Objectivity-Medium";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-Medium.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-MediumSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-MediumSlanted.ttf");
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Objectivity-Regular";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-Regular.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-RegularSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-RegularSlanted.ttf");
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Objectivity-Super";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-Super.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-SuperSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-SuperSlanted.ttf");
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Objectivity-Thin";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-Thin.ttf");
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Objectivity-ThinSlanted";
+  font-family: "Objectivity";
   src: url("/fonts/Objectivity-ThinSlanted.ttf");
   font-style: normal;
   font-display: swap;
@@ -109,6 +109,8 @@ body {
 
 }
 
-.plasmic_code_component_examples_root_reset__2FjkK {
-  font-family: "Objectivity-Medium", "Objectivity";
-}
+
+
+
+
+
